--- a/capsuladiscos/core/templates/core/base.html
+++ b/capsuladiscos/core/templates/core/base.html
@@ -134,7 +134,7 @@
                 {% endif %}
             </p> <!-- páginas extras acá -->
             <p class="copyright text-muted">&copy;<b>Cápsula Discos 2022</b>, todos los derechos reservados</p>
-            <p class="copyright text-muted">Desarrollado por <a href="https://www.instagram.com/maurosolar/">Mauro Solar</a></p>
+            <p class="copyright text-muted">Desarrollado por <a class="info-plataformas" href="https://www.instagram.com/maurosolar/" target="_blank">Mauro Solar</a> :: <a class="info-plataformas" href="https://www.instagram.com/botonsecreto/" target="_blank">Botón Secreto</a></p>
         </div>
     </footer>
      <!-- Bootstrap **** Los archivos JavaScript siempre en la parte inferior dentro del body -->
