--- a/capsuladiscos/catalogo/templates/catalogo/banda.html
+++ b/capsuladiscos/catalogo/templates/catalogo/banda.html
@@ -99,7 +99,7 @@
 <!-- ::::::::: IMAGEN DE LA BANDA :::::::-->
 <div class="col-lg-5 offset-lg-1">
     <!-- ImageField tiene atributo url que genera ruta correcta automáticamente ocupando variable MEDIA_URL en settings.py -->
-    <img class="img-fluid" src="{{banda.imgBanda.url}}" alt="">
+    <img class="img-fluid imgBandaMusico-tam" src="{{banda.imgBanda.url}}" alt="">
 </div>
 <!-- ::::: DISCOS DE LA BANDA ::::-->
 <div>
