--- a/capsuladiscos/core/templates/core/base.html
+++ b/capsuladiscos/core/templates/core/base.html
@@ -14,6 +14,7 @@
 
     <!-- Bootstrap y Javascripts ***** SIEMPRE DENTRO DEL HEAD-->
     <link href="{% static 'core/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <script src="{% static 'core/js/capsula-titulos.js' %}"></script>
    
     <!-- Fuentes -->
     <link href="{% static 'core/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
@@ -144,6 +145,7 @@
      <!-- Versión mínima de bootstrap js-->
      <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
      <script src="{% static 'core/js/clean-blog.min.js' %}"></script>
+     
 </body>
 
 </html>
