--- a/capsuladiscos/contact/templates/contact/contact.html
+++ b/capsuladiscos/contact/templates/contact/contact.html
@@ -10,6 +10,7 @@
     <!-- <span class="subheading">Contacto</span> -->
 {% endblock %}
 {% block content %}
+<script src='https://www.google.com/recaptcha/api.js?hl=es'></script><!--SCRIPT RECAPTCHA -->
 <section style="border: dashed; border-color: darkgray;" class="page-section about-heading">
   <div class="container">
     <div class="about-heading-content">
@@ -22,6 +23,8 @@
             <!-- Formulario de contacto -->
             {% if 'ok' in request.GET %}
                 <p><b>Tu mensaje fue enviado correctamente, pronto nos pondremos en contacto, ¡gracias!</b></p>
+            {% else %}
+                <p><b>Algo falló en el envío, inténtalo otra vez.</b></p>
             {% endif %}
             <form action="" method="POST">
                 {% csrf_token %}
@@ -46,6 +49,7 @@
                     </div>
                     {{form.content.errors}}
                 </div>
+                <div class="g-recaptcha" data-sitekey="6Le-Zu8gAAAAAN1ahus9bziUp0NGRzdXGRslfxDP"></div><!-- RECAPTCHA -->
                 <div class="text-center">
                     <input type="submit" class="btn btn-primary btn-block py-2" value="Enviar">
                 </div>
